@@ -25,7 +25,7 @@ PBXBUILD	= /usr/bin/pbxbuild
 
 BUILD		= ${PBXBUILD} SYMROOT="${SYMROOT}" -target "${TARGET}" \
 			TCL_FRAMEWORK_DIR="${TCL_FRAMEWORK_DIR}" \
-			TCLSH_DIR="${TCLSH_DIR}"
+			TCLSH_DIR="${TCLSH_DIR}" ${MAKEOVERRIDES}
 
 DEVBUILD	= ${BUILD} -buildstyle "${DEVBUILDSTYLE}"
 DEPBUILD	= ${BUILD} -buildstyle "${DEPBUILDSTYLE}"
